--- a/src/Assets/Styles/styled-system.scss
+++ b/src/Assets/Styles/styled-system.scss
@@ -26,18 +26,17 @@
   align-items: center;
 }
 
-.a-b{
+.a-b {
   align-items: baseline;
 }
 
-.a-e{
-  align-items:flex-start ;
-
+.a-e {
+  align-items: flex-start;
 }
-.wrap{
-    flex-wrap: wrap;
+.wrap {
+  flex-wrap: wrap;
 }
-.gap{
+.gap {
   gap: 0.5rem;
 }
 .gap-1 {
@@ -52,210 +51,201 @@
   gap: 3rem;
 }
 
-.gap-4{
+.gap-4 {
   gap: 4rem;
 }
 
-.gap-5{
-    gap: 5rem ;
+.gap-5 {
+  gap: 5rem;
 }
 
-.gap-6{
-  gap: 6rem ;
+.gap-6 {
+  gap: 6rem;
 }
 
-
-.gap-7{
-  gap: 7rem ;
+.gap-7 {
+  gap: 7rem;
 }
 
-
-.gap-10{
-  gap: 10rem ;
+.gap-10 {
+  gap: 10rem;
 }
 
-.gap-15{
-  gap: 15rem ;
+.gap-15 {
+  gap: 15rem;
 }
 
-.gap-20{
-  gap: 20rem ;
+.gap-20 {
+  gap: 20rem;
 }
-.full-h{
+.full-h {
   height: 100vh;
 }
 
-.full-w{
+.full-w {
   width: 100%;
 }
 
-.fs-1{
+.fs-1 {
   font-size: 1rem;
 }
 
-.fs-08{
+.fs-08 {
   font-size: 0.8rem;
-
 }
 
-.fs-09{
+.fs-09 {
   font-size: 0.9rem;
-
 }
 
-.fs-15{
+.fs-15 {
   font-size: 1.5rem;
 }
 
-.fs-14{
+.fs-14 {
   font-size: 1.4rem;
 }
 
-.fs-12{
+.fs-12 {
   font-size: 1.2rem;
 }
 
-
-.fs-11{
+.fs-11 {
   font-size: 1.1rem;
 }
 
-
-.fs-13{
+.fs-13 {
   font-size: 1.3rem;
 }
-.fs{
+.fs {
   font-size: 0.5rem;
 }
 
-.bold{
+.bold {
   font-weight: bold;
 }
 
-.bolder{
+.bolder {
   font-weight: bolder;
-
 }
 
-.mt-1{
+.mt-1 {
   margin-top: 1rem;
 }
 
-.mt-2{
+.mt-2 {
   margin-top: 2rem;
 }
-.mt-3{
+.mt-3 {
   margin-top: 3rem;
 }
 
-
-.mt-5{
+.mt-5 {
   margin-top: 5rem;
 }
 
-.mt-8{
+.mt-8 {
   margin-top: 8rem;
 }
 
-.mt-10{
+.mt-10 {
   margin-top: 10rem;
 }
 
-.mb-1{
+.mb-1 {
   margin-bottom: 1rem;
 }
 
-
-.mb-2{
+.mb-2 {
   margin-bottom: 2rem;
 }
 
-
-
-
-.mb-3{
+.mb-3 {
   margin-bottom: 3rem;
 }
 
-.mr-05{
+.mr-05 {
   margin-right: 0.5rem;
 }
 
-.mr-1{
+.mr-1 {
   margin-right: 1rem;
 }
 
-.mr-2{
+.mr-2 {
   margin-right: 2rem;
 }
 
-.mr-3{
+.mr-3 {
   margin-right: 3rem;
 }
 
-.gray-100{
+.gray-100 {
   color: var(--gray-100);
 }
 
-
-.gray-150{
+.gray-150 {
   color: var(--gray-150);
 }
 
-.gray-200{
+.gray-200 {
   color: var(--gray-200);
 }
 
-
-.gray-300{
+.gray-300 {
   color: var(--gray-300);
 }
 
-
-.gray-400{
+.gray-400 {
   color: var(--gray-400);
 }
 
-
-.blue-100{
+.blue-100 {
   color: var(--blue-100);
 }
 
-.primary{
+.primary {
   color: var(--primary);
 }
 
-
-.fs-2{
+.fs-2 {
   font-size: 2rem;
 }
 
-.fs-18{
+.fs-18 {
   font-size: 1.8rem;
 }
 
-.fs-3{
+.fs-3 {
   font-size: 3rem;
 }
 
-.textShadow{
-  text-shadow: 2px 2px 0 #faa9a9;
-
+.fs-4 {
+  font-size: 4rem;
+}
+.fs-5 {
+  font-size: 5rem;
+}
+.fs-6 {
+  font-size: 6rem;
 }
 
-.primary-T{
+.textShadow {
+  text-shadow: 2px 2px 0 #faa9a9;
+}
+
+.primary-T {
   color: #ef3a4f70;
 }
 
-
-.bg-g{
+.bg-g {
   background-color: rgb(0, 128, 77);
 }
 
-.bg-b{
+.bg-b {
   background-color: var(--blue-100);
 }
 
-.bg-w{
-  background-color: var( --warning);
+.bg-w {
+  background-color: var(--warning);
 }
